--- a/src/index.html
+++ b/src/index.html
@@ -60,28 +60,45 @@
 
 	<div class="advantages">
 		<div class="container">
-			<h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
 				<div class="advantages__item">
 					<img src="icons/advantagers/cup.png" alt="cup">
-					<h3 class="advantages__subheader">Делимся опытом</h3>
+					<h3 class="advantages__subtitle">Делимся опытом</h3>
 					<div class="advantages__descr">Наши сотрудники всегда готовы<br> поделиться своим опытом,<br> так как сами бегают полумарафоны,<br> переплыли Босфор, готовятся к<br> соревнованиям по триатлону!
 					</div>
 				</div>
 				<div class="advantages__item">
 					<img src="icons/advantagers/heart.png" alt="heart">
-					<h3 class="advantages__subheader">Заботимся о здоровье</h3>
+					<h3 class="advantages__subtitle">Заботимся о здоровье</h3>
 					<div class="advantages__descr">Мы работаем для того,<br> чтобы Ваши занятия спортом шли на<br> пользу Вашему здоровью и были в<br> радость Вам и Вашим близким!</div>
 				</div>
 				<div class="advantages__item">
 					<img src="icons/advantagers/shoe.png" alt="shoe">
-					<h3 class="advantages__subheader">Учим бегать</h3>
+					<h3 class="advantages__subtitle">Учим бегать</h3>
 					<div class="advantages__descr">Помогаем с обучением<br> правильной технике бега!<br> Дружим с крупнейшей школой бега в<br> России <a href="">- I LOVE RUNNING</a>.</div>
 				</div>
 				
 			</div>
 		</div>
 
+	</div>
+
+	<div class="consultation">
+		<div class="container">
+			<h2 class="title title_left">
+				Получите бесплатную консультацию<br> по подбору пульсометра 
+			</h2>
+			<div class="consultation__descr">Просто заполните форму заявки<br> 
+			и мы перезвоним вам в течении 10 минут
+			</div>
+			<form class="feed-form" action="#">
+				<input name="name" placeholder="Ваше ім'я" type="text">
+				<input name="phone" placeholder="Ваш телефон" type="number">
+				<input name="email" placeholder="Ваш E-mail" type="email">
+				<button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+		</div>
 	</div>
 
 </body>
