--- a/src/index.html
+++ b/src/index.html
@@ -367,6 +367,36 @@
 
 		</div>
 	</section>
+    <section class="feed">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="feed__item">
+                <img src="img/feed_1.png" alt="feed1" class="feed__img">
+                <div class="feed__text">
+                    <div class="feed__name">Ирина Иванченко </div>
+                    <div class="feed__marafon">2 полумарафона</div>
+                    <div class="feed__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали<br> пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br>
+                    Спасибо, RunSmart!  </div>
+                </div>
+            </div>
+            <div class="feed__item">
+                <img src="img/feed__2.png" alt="feed2" class="feed__img">
+                <div class="feed__text">
+                    <div class="feed__name">Иван Сёмочкин</div>
+                    <div class="feed__marafon">1 полумарафон</div>
+                    <div class="feed__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе<br> делал.<br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели<br> первую тренировку, научили пользоваться новым гаджетом. Также объяснили<br> основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                </div>
+            </div>
+            <div class="feed__item">
+                <img src="img/feed__3.png" alt="feed3" class="feed__img">
+                <div class="feed__text">
+                    <div class="feed__name">Юлия Дашкина</div>
+                    <div class="feed__marafon">2 полумарафона</div>
+                    <div class="feed__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось<br> тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и<br> решила попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант<br> со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена<br> останавливаться!<br><br>Спасибо!!!<br></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
