--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="button">заказать звонок</button>
+					<button data-modall="consultation" class="button">заказать звонок</button> <!--дата атрибут data-прописуємо клас modal, в "" зв'язуємо з id в класі modall-->
 				</div>
 			</header>
 			<div class="promo__wrapper">
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 
-				<button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+				<button data-modall="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
 				<div class="promo__link">
 					или 
 					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -94,10 +94,10 @@
 			<div class="consultation__descr">Просто заполните форму заявки<br> 
 			и мы перезвоним вам в течении 10 минут
 			</div>
-			<form class="feed-form" action="#">
-				<input name="name" placeholder="Ваше ім'я" type="text">
-				<input name="phone" placeholder="Ваш телефон" type="number">
-				<input name="email" placeholder="Ваш E-mail" type="email">
+			<form id="consultation-form" class="feed-form" action="#">
+				<input name="name" required placeholder="Ваше ім'я" type="text">
+				<input name="phone" required placeholder="Ваш телефон">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
 				<button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
 			</form>
 		</div>
@@ -135,7 +135,7 @@
                          -->
                         <div class="catalog-item__content catalog-item__content_active">  
                             <img src="img/pusometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT1234</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -398,9 +398,58 @@
         </div>
     </section>
 
+
+
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2669.078884199705!2d37.64722570980655!3d55.76859673348951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRltGPLCAxMDcwNzg!5e0!3m2!1suk!2sua!4v1677066266823!5m2!1suk!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <addres class="footer__addr">Москва, Мясницкий проезд, д.3с1</addres>
+            <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook" class="footer__img"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram" class="footer__img"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest" class="footer__img"></a>
+            </div>
+        </div>
+    </footer>
+
+    <div class="overlay">
+        <div class="modall" id="consultation">
+            <div class="modall__close">&#10008;</div>
+            <div class="modall__subtitle">Просто заполните форму заявки</div>
+            <div class="modall__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required placeholder="Ваше ім'я" type="text">
+				<input name="phone" required placeholder="Ваш телефон">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+        </div>
+        <div class="modall" id="order">
+            <div class="modall__close">&#10008;</div>
+            <div class="modall__subtitle">Ваш заказ:</div>
+            <div class="modall__descr">Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required placeholder="Ваше ім'я" type="text">
+				<input name="phone" required placeholder="Ваш телефон">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<button class="button button_submit">Купить</button>
+			</form>
+        </div>
+        <div class="modall modall_mini" id="thanks">
+            <div class="modall__close">&#10008;</div>
+            <div class="modall__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modall__descr">Наш менеджер свяжется с вами<br> в ближайшее время!</div>
+        </div>
+
+    </div>
+
+
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
